force-app/main/default/objects/Initiative__c/Initiative__c.object-meta.xml
<CustomObject>
    <description>CNP Improvement initiative tracking</description>
    <label>Initiative</label>
    <nameField>
        <displayFormat>Initiative-{0}</displayFormat>
        <label>Initiative Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>