force-app/main/default/objects/Initiative__c/fields/Active_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Active_Initiative__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the Initiative is currently active within the team&#39;s activities.</description>
    <label>Active Initiative</label>
    <type>Checkbox</type>
</CustomField>