force-app/main/default/objects/Initiative__c/fields/CI_Initiative__c.field-meta.xml
<CustomField>
    <fullName>CI_Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if the initiative is part of Continuous Improvement</description>
    <inlineHelpText>Initiative part of the CI Improvement Process?</inlineHelpText>
    <label>CI Initiative</label>
    <type>Checkbox</type>
</CustomField>