force-app/main/default/objects/Initiative__c/fields/CI_Team_Contact__c.field-meta.xml
<CustomField>
    <fullName>CI_Team_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CI Team Member responsible for managing the initiative</description>
    <inlineHelpText>List of team members</inlineHelpText>
    <label>CI Team Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>