force-app/main/default/objects/Initiative__c/fields/CNP_Division__c.field-meta.xml
<CustomField>
    <fullName>CNP_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CNP Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CNP CI Division</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>