force-app/main/default/objects/Initiative__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this initiative is sensitive or confidential, ensure that it is checked by the CI team in order to hide it to everyone except the Initiative Owner, Reporter or VP</description>
    <inlineHelpText>Check if the Initiative is confidential or sensitive.</inlineHelpText>
    <label>Confidential?</label>
    <type>Checkbox</type>
</CustomField>