force-app/main/default/objects/Initiative__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed information about the initiative</description>
    <inlineHelpText>Detailed information about the initiative</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>