force-app/main/default/objects/Initiative__c/fields/Executive_Contact__c.field-meta.xml
<CustomField>
    <fullName>Executive_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>who is the executive for this initiative</inlineHelpText>
    <label>Executive Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>CNP CI Executive Acct</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>