force-app/main/default/objects/Initiative__c/fields/Financially_Reportable__c.field-meta.xml
<CustomField>
    <fullName>Financially_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this initiative ready to be reported financially?</inlineHelpText>
    <label>Financially Reportable</label>
    <type>Checkbox</type>
</CustomField>