force-app/main/default/objects/Initiative__c/fields/Initiative_Name__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Name__c</fullName>
    <label>Initiative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>