force-app/main/default/objects/Initiative__c/fields/Initiative_Priority__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Priority__c</fullName>
    <description>For internal team use to determine if initiative should  be escalated into the 45-day vetting period to find quick wins financially.</description>
    <label>Initiative Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Potential</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
            <value>
                <fullName>Vetted - Savings Only</fullName>
            </value>
            <value>
                <fullName>Vetted - Process Only</fullName>
            </value>
            <value>
                <fullName>Vetted - No Opportunity</fullName>
            </value>
            <value>
                <fullName>Vetted - Process and Savings</fullName>
            </value>
            <value>
                <fullName>Vetted - Already in Plan</fullName>
            </value>
            <value>
                <fullName>Currently Out of Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>