force-app/main/default/objects/Initiative__c/fields/Initiative_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Start_Date__c</fullName>
    <description>Date that the initiative kicks off</description>
    <inlineHelpText>Needs to be a calendar date</inlineHelpText>
    <label>Initiative Start Date</label>
    <type>Date</type>
</CustomField>