force-app/main/default/objects/Initiative__c/fields/Legacy_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this initiative was a part of the original Legacy Project conducted in 2014.</description>
    <label>Legacy Initiative</label>
    <type>Checkbox</type>
</CustomField>