force-app/main/default/objects/Initiative__c/fields/Non_Financial_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Non_Financial_Benefits__c</fullName>
    <label>Non-Financial Benefits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>