force-app/main/default/objects/Initiative__c/fields/Phase_of_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Phase_of_Initiative__c</fullName>
    <inlineHelpText>current phase of the initiative</inlineHelpText>
    <label>Phase of Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Planning</fullName>
                <default>true</default>
                <label>1 - Planning</label>
            </value>
            <value>
                <fullName>2 - Evaluation</fullName>
            </value>
            <value>
                <fullName>3 - Implementation</fullName>
            </value>
            <value>
                <fullName>4 - Complete</fullName>
            </value>
            <value>
                <fullName>5 - Complete - No Further Action</fullName>
            </value>
            <value>
                <fullName>0 - Sidelined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>