force-app/main/default/objects/Initiative__c/fields/PI_Initiative__c.field-meta.xml
<CustomField>
    <fullName>PI_Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Initiative is part of the Process Improvement process</description>
    <inlineHelpText>Check if part of Process Improvement</inlineHelpText>
    <label>PI Initiative</label>
    <type>Checkbox</type>
</CustomField>