force-app/main/default/objects/Initiative__c/fields/Proj_Annual_Capital_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Proj_Annual_Capital_Benefit__c</fullName>
    <description>The projected annual capital benefit from the initiative</description>
    <inlineHelpText>currency value with no decimals</inlineHelpText>
    <label>Proj. Annual Capital Benefit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>