force-app/main/default/objects/Initiative__c/fields/Proj_Annual_O_M_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Proj_Annual_O_M_Benefit__c</fullName>
    <description>The dollar value of the projected annual O&amp;M benefit from the initiative</description>
    <inlineHelpText>Currency value with no decimals</inlineHelpText>
    <label>Proj. Annual O&amp;M Benefit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>