force-app/main/default/objects/Initiative__c/fields/Proj_Capital_Cost_to_Implement__c.field-meta.xml
<CustomField>
    <fullName>Proj_Capital_Cost_to_Implement__c</fullName>
    <description>The projected capital cost to implement the initiative</description>
    <inlineHelpText>Currency without decimals</inlineHelpText>
    <label>Proj. Capital Cost to Implement</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>