force-app/main/default/objects/Initiative__c/fields/Proj_O_M_Cost_to_Implement__c.field-meta.xml
<CustomField>
    <fullName>Proj_O_M_Cost_to_Implement__c</fullName>
    <description>The projected O&amp;M cost to implement.</description>
    <inlineHelpText>Currency value with no decimals.</inlineHelpText>
    <label>Proj. O&amp;M Cost to Implement</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>