force-app/main/default/objects/Initiative__c/fields/Proj_Team_Recommendation_Date__c.field-meta.xml
<CustomField>
    <fullName>Proj_Team_Recommendation_Date__c</fullName>
    <description>Projected date for team recommendation to Executives</description>
    <inlineHelpText>Date will need to be populated once the checkbox is checked.</inlineHelpText>
    <label>Proj. Team Recommendation Date</label>
    <type>Date</type>
</CustomField>