force-app/main/default/objects/Initiative__c/fields/Reporting_User__c.field-meta.xml
<CustomField>
    <fullName>Reporting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>