force-app/main/default/objects/Initiative__c/listViews/All_Inactive_Initiatives.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Initiative_Name__c</columns>
    <columns>Initiative_Priority__c</columns>
    <columns>Phase_of_Initiative__c</columns>
    <columns>CNP_Division__c</columns>
    <columns>Executive_Contact__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Reporting_User__c</columns>
    <columns>CI_Team_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Legacy_Initiative__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Initiative__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Inactive Initiatives</label>
    <language>en_US</language>
    <sharedTo>
        <group>Continuous_Improvement</group>
    </sharedTo>
</ListView>