force-app/main/default/objects/Initiative__c/listViews/All_Initiatives.listView-meta.xml
<ListView>
    <fullName>All_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Initiative_Name__c</columns>
    <columns>Phase_of_Initiative__c</columns>
    <columns>Initiative_Priority__c</columns>
    <columns>CNP_Division__c</columns>
    <columns>Executive_Contact__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CI_Team_Contact__c</columns>
    <columns>Reporting_User__c</columns>
    <columns>Legacy_Initiative__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Initiatives</label>
    <language>en_US</language>
</ListView>