force-app/main/default/objects/Initiative__c/listViews/Confidential.listView-meta.xml
<ListView>
    <fullName>Confidential</fullName>
    <columns>NAME</columns>
    <columns>Initiative_Name__c</columns>
    <columns>CNP_Division__c</columns>
    <columns>Initiative_Priority__c</columns>
    <columns>Phase_of_Initiative__c</columns>
    <columns>Executive_Contact__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CI_Team_Contact__c</columns>
    <columns>Reporting_User__c</columns>
    <columns>Confidential__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Confidential__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Confidential</label>
    <language>en_US</language>
    <sharedTo>
        <group>Continuous_Improvement</group>
    </sharedTo>
</ListView>