force-app/main/default/objects/Initiative__c/listViews/Legacy_Initiatives.listView-meta.xml
<ListView>
    <fullName>Legacy_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Initiative_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Phase_of_Initiative__c</columns>
    <columns>Initiative_Start_Date__c</columns>
    <columns>CNP_Division__c</columns>
    <columns>Executive_Contact__c</columns>
    <columns>Active_Initiative__c</columns>
    <columns>Confidential__c</columns>
    <columns>CI_Team_Contact__c</columns>
    <columns>Financially_Reportable__c</columns>
    <columns>Non_Financial_Benefits__c</columns>
    <columns>PI_Initiative__c</columns>
    <columns>Year_Savings_Begin__c</columns>
    <columns>Reporting_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Legacy_Initiative__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Legacy Initiatives</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
        <group>Continuous_Improvement</group>
    </sharedTo>
</ListView>