force-app/main/default/objects/Initiative__c/listViews/Nick_Initiative.listView-meta.xml
<ListView>
    <fullName>Nick_Initiative</fullName>
    <columns>Initiative_Name__c</columns>
    <columns>Description__c</columns>
    <columns>CNP_Division__c</columns>
    <columns>Phase_of_Initiative__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Executive_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>Nick - Initiative</label>
    <language>en_US</language>
    <sharedTo>
        <group>Continuous_Improvement</group>
    </sharedTo>
</ListView>