force-app/main/default/objects/Initiative__c/listViews/X1_Planning.listView-meta.xml
<ListView>
    <fullName>X1_Planning</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Initiative_Name__c</columns>
    <columns>Phase_of_Initiative__c</columns>
    <columns>CNP_Division__c</columns>
    <columns>Executive_Contact__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase_of_Initiative__c</field>
        <operation>equals</operation>
        <value>1 - Planning</value>
    </filters>
    <label>1 - Planning</label>
    <language>en_US</language>
    <sharedTo>
        <group>Continuous_Improvement</group>
    </sharedTo>
</ListView>